tests/NormalTests/paczka1/small_fuzzy/78629050.err
Error in line 2: 74BD A587 23,3
Error in line 11: HlWg4 A94 90,1
Error in line 16: FMZj4 A88| 116,1
